# scrapers

./: README.md  githfield.yml  pyproject.toml
src/finscrapers/: __init__.py  alphavantage.py  base.py  coingecko.py  coingecko_supply.py  ecb.py  esef.py  http.py  onchain.py  registry.py  sec_bulk.py  sec_edgar.py  sec_submissions.py  stooq.py  wikidata.py  yahoo_eod.py
tests/: test_ecb.py  test_entity_facts.py  test_esef.py  test_onchain.py  test_prices.py  test_sec_bulk.py  test_sec_edgar.py  test_sec_submissions.py  test_yahoo_eod.py
